src/index.css
/**
 * By Oskar Wickström
 * Licensed under the MIT License (https://github.com/owickstrom/elements-of-web-typography/blob/main/LICENSE.md)
 **/
@import url('https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Alegreya:ital,wght@0,400..900;1,400..900&family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap');

:root {
  --font-family: "Alegreya", serif;
  --font-family-code: "Courier Prime", monospace;
  --line-height: 1.20rem;
  --border-thickness: 1.5px;
  --text-color: #000;
  --text-color-alt: #666;
  --background-color: #fff;
  --background-color-alt: #eee;

  --font-weight-normal: 450;
  --font-weight-medium: 600;
  --font-weight-bold: 800;

  font-family: var(--font-family);
  font-optical-sizing: auto;
  font-weight: var(--font-weight-normal);
  font-style: normal;
  font-variant-numeric: oldstyle-nums;
  font-feature-settings: "onum"; 
  font-size: 16px;
}

@media (prefers-color-scheme: dark) {
  :root {
    --text-color: #fff;
    --text-color-alt: #aaa;
    --background-color: #000;
    --background-color-alt: #111;
  }
}

* {
  box-sizing: border-box;
}


* + * {
  margin-top: var(--line-height);
}

html {
  display: flex;
  width: 100%;
  margin: 0;
  padding: 0;
  flex-direction: column;
  align-items: center;
  background: var(--background-color);
  color: var(--text-color);
}

body {
  position: relative;
  width: 100%;
  margin: 0;
  padding: var(--line-height) 2ch;
  max-width: 70ch;
  line-height: var(--line-height);
  overflow-x: hidden;
}

@media screen and (max-width: 480px) {
  :root {
    font-size: 14px;
  }
  body {
    padding: var(--line-height) 1ch;
  }
}

h1, h2, h3, h4, h5, h6 {
  font-weight: var(--font-weight-normal);
  margin: var(--line-height) 0;
  line-height: var(--line-height);
}

.header-section-number {
  font-family: 'Alegreya', serif;
  font-size: .875rem;
  font-weight: var(--font-weight-normal);
  font-variant: initial;
  letter-spacing: 0;
  margin-right: .5ch;
  font-style: normal;
}

body > h1, h2#toc-title {
  font-family: 'Alegreya SC', serif;
  font-variant: titling-caps;
  font-size: 1.25rem;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 0.15em;
  padding: calc(var(--line-height)) 0;
  margin: var(--line-height) 0;
  border-bottom: var(--border-thickness) solid var(--text-color);
  background: var(--background-color);
}

h1 .header-section-number {
  display: none;
}

h2 {
  font-family: 'Alegreya SC', serif;
  font-size: 1.25rem;
  font-variant: all-small-caps;
  font-weight: 450;
  letter-spacing: 0.125em;
}

h3 {
  font-style: italic;
}

h4 {

}

hr {
  position: relative;
  display: block;
  height: var(--line-height);
  margin: calc(var(--line-height) * 1.5) 0;
  border: none;
  color: var(--text-color);
}

hr:before {
  display: block;
  content: "";
  position: absolute;
  top: calc(var(--line-height) / 2);
  left: 0;
  width: 100%;
  border-top: var(--border-thickness) solid var(--text-color);
  height: 0;
}
hr:after {
  display: inline-block;
  content: "❧";
  position: absolute;
  top: 0;
  left: calc(50% - 1ch);
  width: 2ch;
  text-align: center;
  font-size: 2rem;
  background: var(--background-color);
}

a {
  text-decoration-thickness: var(--border-thickness);
}

a:link, a:visited {
  color: var(--text-color);
}

p {
  margin-top: var(--line-height);
  text-align: justify;
  word-break: break-all;
}
p + p {
  margin-top: 0;
  text-indent: 2ch;
}

h1 + p,
h2 + p,
h3 + p,
h4 + p,
hr + p {
  text-indent: 0;
}

strong {
  font-weight: var(--font-weight-bold);
}
em {
  font-style: italic;
}
abbr {
  font-size: 1.125rem;
  font-variant: all-small-caps;
  font-weight: 500;
  letter-spacing: 0.05em;
}

blockquote {
  padding: 0;
  margin: var(--line-height) 2ch;
  font-style: italic;
}
blockquote p {
  text-indent: 0;
}
blockquote cite {
  display: block;
  font-style: normal;
}
blockquote cite:before {
  display: inline-block;
  margin-right: .5ch;
  content: "—";
}

sub {
  position: relative;
  display: inline-block;
  margin: 0;
  vertical-align: sub;
  line-height: 0;
  width: calc(1ch / 0.75);
  font-size: .75rem;
}

table {
  width: 100%;
  border-collapse: collapse;
  margin: 0 0 calc(var(--line-height) * 2);
  padding: 0;
}

th, td {
  padding: calc(var(--line-height) / 2) .5ch;
  line-height: var(--line-height);
  vertical-align: top;
  text-align: left;
}

th {
  font-size: 1.125rem;
  font-variant: all-small-caps;
  font-weight: 500;
  letter-spacing: 0.05em;
}
thead tr:last-child th {
  border-bottom: var(--border-thickness) solid var(--text-color);
}

header {
  margin: calc(var(--line-height) * 4) 0;
}
header h1 {
  font-size: 2.5rem;
  line-height: calc(2 * var(--line-height));
  margin: calc(var(--line-height) * 1) 0;
  text-transform: initial;
  letter-spacing: 0;
  padding-bottom: 0;
  border-bottom: none;
}
header .subtitle {
  font-size: 1.75rem;
  font-style: italic;
  margin-bottom: calc(var(--line-height) * 2);
}
header p {
  text-indent: 0;
}

p {
  word-break: break-word;
  word-wrap: break-word;
  hyphens: auto;
}

img, video {
  display: block;
  width: 100%;
  object-fit: contain;
  overflow: hidden;
}
img {
  font-style: italic;
  color: var(--text-color-alt);
}

details {
  margin: var(--line-height) 0;
  border-top: var(--border-thickness) solid var(--text-color);
  border-bottom: var(--border-thickness) solid var(--text-color);
  padding: var(--line-height) 0;
}

summary {
  font-weight: var(--font-weight-normal);
  font-style: italic;
  cursor: pointer;
}
details[open] summary {
  margin-bottom: var(--line-height);
}

details ::marker {
  content: '';
}

details summary::before {
  display: inline-block;
  content: '»';
  margin: 0 .5ch 0 0;
}
details[open] summary::before {
  transform: rotate(90deg);
}

details :last-child {
  margin-bottom: 0;
}

pre {
  white-space: pre;
  overflow-x: auto;
  margin: var(--line-height) 0;
  overflow-y: hidden;
}
figure pre {
  margin: 0;
}

pre, code {
  font-family: var(--font-family-code);
}

code {
  font-weight: 450;
  font-size: .95em;
}

figure {
  margin: calc(var(--line-height) * 2) 0;
  overflow-x: auto;
  overflow-y: hidden;
}

figcaption {
  display: block;
  font-style: italic;
  margin-top: var(--line-height);
  text-align: center;
}

ul, ol {
  padding: 0;
  margin: 0 0 var(--line-height);
}

ul {
  list-style-type: none;
  padding: 0;
}
ul li:before {
  content: "•";
  margin-right: 1ch;
}

ol {
  list-style-type: none;
  counter-reset: item;
  padding: 0;
}
ol ul,
ol ol,
ul ol,
ul ul {
  padding: 0 0 0 2ch;
  margin: 0;
}
ol li:before { 
  font-size: .875rem;
  content: counters(item, ".") ". ";
  counter-increment: item;
}

li {
  margin: 0;
  padding: 0;
}

li::marker {
  line-height: 0;
}

::-webkit-scrollbar {
    height: var(--line-height);
}

input, button, textarea {
  border: var(--border-thickness) solid var(--text-color);
  padding: 
    calc(var(--line-height) / 2 - var(--border-thickness))
    calc(1ch - var(--border-thickness));
  margin: 0;
  font: inherit;
  font-weight: inherit;
  height: calc(var(--line-height) * 2);
  width: auto;
  overflow: visible;
  background: var(--background-color);
  color: var(--text-color);
  line-height: normal;
  -webkit-font-smoothing: inherit;
  -moz-osx-font-smoothing: inherit;
  -webkit-appearance: none;
}

input[type=checkbox],
input[type=radio] {
  display: inline-grid;
  place-content: center;
  vertical-align: top;
  width: 2ch;
  height: var(--line-height);
  cursor: pointer;
}
input[type=checkbox]:checked:before,
input[type=radio]:checked:before {
  content: "";
  width: 1ch;
  height: calc(var(--line-height) / 2);
  background: var(--text-color);
}
input[type=radio],
input[type=radio]:before {
  border-radius: 100%;
}

button:focus, input:focus {
  --border-thickness: 3px;
  outline: none;
}

input {
  width: calc(round(down, 100%, 1ch));
}
::placeholder {
  color: var(--text-color-alt);
  opacity: 1;
}
::-ms-input-placeholder {
  color: var(--text-color-alt);
}
button::-moz-focus-inner {
  padding: 0;
  border: 0
}

button {
  text-transform: uppercase;
  font-weight: var(--font-weight-medium);
  cursor: pointer;
}

button:hover {
  background: var(--background-color-alt);
}
button:active {
  transform: translate(2px, 2px);
}

label {
  display: block;
  width: calc(round(down, 100%, 1ch));
  height: auto;
  line-height: var(--line-height);
  font-weight: var(--font-weight-medium);
  margin: 0;
}

label input {
  width: 100%;
}

.toc-section-number {
  font-size: .875rem;
  font-weight: var(--font-weight-normal);
  letter-spacing: 0;
  margin-right: .5ch;
  font-style: normal;
}

#TOC a {
  text-decoration: none;
}
#TOC a:hover {
  text-decoration: underline;
}

/* DEMO UTILITIES */

#font-sizes td {
  width: 1%;
  text-align: center;
  vertical-align: baseline;
  line-height: 3rem;
  padding: 0;
}

